added eslint config

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,25 +1,30 @@
+@import 'test';
+
 body {
-  background: red;
+  position: absolute;
+
+  background: blue;
 }
 
 .my-div {
   display: flex;
-  transition: all .5s;
+
+  transition: all 0.5s;
   user-select: none;
 }
 
 p {
-  height: 100px;
   width: 100px;
+  height: 100px;
 }
 
 span {
-  height: 100px;
   width: 100px;
+  height: 100px;
 }
 
 @media (min-resolution: 2dppx) {
   .my-test {
-      display: flex;
+    display: flex;
   }
 }
