--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,56 +1,3 @@
 @import 'normalize';
-@import 'test';
-@import 'mixins';
 @import 'box-sizing';
-
-body {
-  position: absolute;
-
-  background: lightgray;
-}
-
-.my-div {
-  display: flex;
-
-  transition: all 0.5s;
-  user-select: none;
-}
-
-$color-green: green;
-$color-yellow: yellow;
-$color-white: white;
-
-.test-mixins {
-  background-color: $color-white;
-
-  @include respond(medium) {
-    @include make-column();
-    @include make-column-span(8);
-    background-color: $color-green;
-  }
-
-  @include respond(large) {
-    @include make-column();
-    @include make-column-span(12);
-    background-color: $color-yellow;
-  }
-}
-
-span {
-  width: 100px;
-  height: 100px;
-}
-
-@media (min-resolution: 2dppx) {
-  .my-test {
-    display: flex;
-  }
-}
-
-$breakpoints: (xs: 575px, sm: 576px, lg: 992px);
-
-.my-responsive {
-  @include break('xs') {
-    width: 100%;
-  }
-}
+@import 'responsive';
