--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,3 +1,5 @@
 @import 'normalize';
 @import 'box-sizing';
-@import 'responsive';
+@import 'page-wrapper';
+@import 'components';
+@import 'grid-responsive';
